# greenbelt

./: .gitignore  Cargo.toml  LICENSE  README.md  db.py  ecologi.py  greenbelt.py  session_hook.py  test_session_hook.py  test_transcript.jsonl  token_monitor.py  view_tokens.py
.claude/: settings.json
src/: config.rs  db.rs  ecologi.rs  lib.rs  main.rs  transcript.rs
tests/: transcript_test.rs
